--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SCRIPT KIDDY</title>
+    <title>SCRIPT KIDDYS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <meta name="author" content="SCRIPT KIDDY" />
+    <meta name="author" content="SCRIPT KIDDYS" />
 
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
